<resources>
    <string-array name="nama_benua">
        <item>Afrika</item>
        <item>Asia</item>
        <item>Eropa</item>
        <item>Amerika</item>
        <item>Australia</item>
    </string-array>

    <string-array name="afrika">
        <item>Afrika Selatan</item>
        <item>Aljazair</item>
        <item>Angola</item>
        <item>Benin</item>
        <item>Botswana</item>
    </string-array>

    <string-array name="asia">
        <item>Afganistan</item>
        <item>Arab Saudi</item>
        <item>Armenia</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
    </string-array>

    <string-array name="eropa">
        <item>Albania</item>
        <item>Andorra</item>
        <item>Armenia</item>
        <item>Azerbaijan</item>
        <item>Austria</item>
    </string-array>

    <string-array name="amerika">
        <item>Amerika Serikat</item>
        <item>Antigua dan Barbuda</item>
        <item>Bahama</item>
        <item>Barbados</item>
        <item>Belize</item>
    </string-array>

    <string-array name="australia">
        <item>Australia</item>
        <item>Fiji</item>
        <item>Kiribati</item>
        <item>Kepulauan Marshall</item>
        <item>Federasi Mikronesia</item>
    </string-array>
    
    <string name="matauang_afrikaselatan">Rand</string>
    <string name="matauang_aljazair">Dinar</string>
    <string name="matauang_angola">Kwanza</string>
    <string name="matauang_benin">Franc CFA</string>
    <string name="matauang_botswana">Pula</string>
    

    <string name="app_name">MyE-Kurs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changer">Money Converter</string>
    <string name="home">Selamat Datang Di Aplikasi E-Kurs</string>
    <string name="book">Book Page</string>
    <string name="hitung_kurs">Hitung kurs</string>
    <string name="hasil_konversi">Hasilnya adalah =</string>
    <string name="hint_kurs">Masukkan harga kurs:</string>
    <string name="kurs">Masukkan harga per dollar</string>
    <string name="hint_dollar">Masukkan jumlah dollar:</string>
    <string name="dollar">Masukkan jumlah dollar</string>
    <string name="news">News Page</string>
    <string name="home_text">Selamat datang di aplikasi My e-Kurs \nAplikasi ini adalah aplikasi yang digunakan untuk mengkoversi mata uang untuk menghindari adanya kesalahan manusia dalam menghitung uang \n\nSelain itu aplikasi ini dapat digunakan untuk mengedukasikan user tentang mata uang apa saja yang ada di dunia yang dikelompokan pada masing masing negara</string>
    <string name="home_about">ABOUT US</string>
    <string name="home_alamat">Alamat: Jalan Slamet Riyadi no 30 \nTelepon: 085604888763 \nGmail: Moneychanger@gmail.com</string>
    <string name="book_currency">Pilih negara</string>
</resources>