<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ChangerFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="180dp"
        android:hint="@string/hint_kurs" />

    <EditText
        android:id="@+id/edtAngka1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="200dp"
        android:hint="@string/kurs"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="280dp"
        android:hint="@string/hint_dollar" />

    <EditText
        android:id="@+id/edtAngka2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="300dp"
        android:hint="@string/dollar"
        android:inputType="number" />

    <Button
        android:id="@+id/btnTmbh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="400dp"
        android:text="@string/hitung_kurs"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:gravity="center"
        android:text="@string/hasil_konversi" />

</FrameLayout>